--- a/less/lib/grid.less
+++ b/less/lib/grid.less
@@ -44,7 +44,8 @@
 // 只有 动态磁砖模块 设定高度 由文字行距 + 外边距 + 内边距 + 边框宽度 及其它常量计算出来
 // 其它类型模块高度为 auto 可设置最小高度
 
-@module-metro-title-height: 30px;    // 动态磁砖模块标题高度
+//@module-metro-title-height: 30px;    // 动态磁砖模块标题高度
+@module-metro-title-height: 60px;    // 动态磁砖模块标题高度
 @module-info-height: 30px;    // 模块信息高度
 @module-metro-bg-height: 90px;  // 动态磁砖背景图片的高度 这是一个常量，与实际的图片大小为准
 
