--- a/less/module/editor.less
+++ b/less/module/editor.less
@@ -69,6 +69,8 @@
     margin: 10px 0 0 10px;
     padding-right: 10px;
 
+//	background:darken(#4617b4, 20%);
+
     .article_title{
         margin-bottom: 10px;
         text-align: center;
