--- a/less/module/module.less
+++ b/less/module/module.less
@@ -165,7 +165,7 @@
 	    margin-top: @module-metro-title-margin-top;
         background: none;
 
-	    line-height: @module-metro-title-height;
+	    line-height: 30px; //@module-metro-title-height;
     }
 
     .module_content{
