--- a/less/module/watch.less
+++ b/less/module/watch.less
@@ -1,6 +1,8 @@
 @charset "utf-8";
 
+@import "../lib/color.less";
 @import "../lib/function.less";
+@import "../lib/grid.less";
 
 //---------- Watch 时钟 ----------
 .module-watch{
@@ -11,7 +13,7 @@
 .watch_wrap{
 	position: relative;
 
-	top: -120px;
+	top: -(@module-metro-title-height + @module-info-height + 60px);//-120px;
 
 	height: 80px;
 	width: 80px;
