--- a/less/module/blog.less
+++ b/less/module/blog.less
@@ -15,6 +15,8 @@
 
 	.module_content{
 		min-height: 500px;
+
+		margin-bottom: -10px;
 	}
 
 	.form_group{
@@ -24,6 +26,10 @@
     .tag:after{
         background: @article-tagsArea-bg;
     }
+
+	.article{
+		margin-bottom: 10px;
+	}
 
 	.article_content{
 		padding-top: 1px;
