--- a/less/core/base.less
+++ b/less/core/base.less
@@ -46,17 +46,20 @@ b{
 }
 
 //----- 重置超链接元素——未访问的链接，已访问的链接，鼠标移动到链接上，选定的链接 -----
-a, a:visited{
+a,
+a:visited{
     outline:none;
     text-decoration:none;
-    color:@a-link;
+    color: @a-link;
 }
+
+.link,  // 特殊链接
+.link:visited, // 特殊链接
 a:hover,
 a:focus,
-a:active,
-.link{// 特殊链接
+a:active{
     text-decoration:underline;
-    color:@a-hover;
+    color: @a-hover;
 }
 
 //----- 去掉文本框 文本域的重置大小 设置文字大小 -----
