--- a/less/lib/grid.less
+++ b/less/lib/grid.less
@@ -53,7 +53,7 @@
 @module-metro-height: @module-info-height + @module-metro-title-height + @module-metro-bg-height;
 
 // 模块标题上外边距
-@module-metro-title-margin-top: @module-info-height + @module-metro-bg-height - 10px;
+@module-metro-title-margin-top: @module-info-height + @module-metro-bg-height;// - 10px;
 
 @module-info-top: -(@module-metro-title-height + @module-metro-title-margin-top);   // 模块信息
 @module-info-padding-right: @space; // 模块信息右边距
