--- a/less/component/icon.less
+++ b/less/component/icon.less
@@ -10,6 +10,9 @@
 	background-position: 5px 5px;
 	background-repeat: no-repeat;
 }
+.icon-add{// 添加
+	background-image: url("../image/default/add.png");
+}
 .icon-filter{// 过滤
 	background-image: url("../image/default/filter.png");
 }
