--- a/less/lib/color.less
+++ b/less/lib/color.less
@@ -385,3 +385,7 @@
 @btn-disabled-color:@c2;    // 按钮禁用状态的文字颜色
 @btn-hover-bg:      @c35;   // 鼠标悬浮按钮上的背景颜色
 @btn-submit-bg:     @c29;   // 提交按钮背景颜色
+
+//----- toolBar 工具条 -----
+@toolBar-bg:        @c29;   // 工具条背景颜色
+@toolBar-border:    @c141;  // 工具条边框颜色
