--- a/less/lib/grid.less
+++ b/less/lib/grid.less
@@ -62,9 +62,12 @@
 @module-content-margin-left: @space;    // 模块内容左外边距
 
 //----- tools 工具栏 -----
-@tools-height:  70px;
+//@tools-height:  70px;
 
-
+//----- toolBar 工具条 -----
+@toolbar-border-width: @space;    // 工具条上左右边框
+@toolBar-margin: @space;      // 工具条左外边距
+@toolBar-padding: @space;   // 工具条上下左内边距
 
 
 @section-title-height: @grid-unit *2 - @space;  // 章节标题高度
@@ -118,8 +121,10 @@
 
 //----- filter 过滤器 -----
 @filter-min-height:             30px;   // 过滤器最小高度
+@filter-all-tag-left:           -@space;    // 过滤器所有标签左偏移
 @filter-all-tag-height:         360px;  // 过滤器所有标签区域高度
 @filter-all-tag-border-width:   1px;    // 过滤器所有标签区域边框宽度
+@filter-all-tag-padding:        10px;   // 过滤器所有标签内边距
 @filter-tag-margin:             10px;   // 过滤器所有标签外间距
 
 //----- page 页码 -----
