--- a/less/lib/z-index.less
+++ b/less/lib/z-index.less
@@ -5,10 +5,12 @@
 @z-lightbox:    10; // 弹窗
 @z-header:      9;  // 页头
 @z-footer:      9;  // 页脚
+
 //@z-nav:         10; // 导航
-@z-tools:       9;  // 工具条
+//@z-tools:       9;  // 工具条
 
 @z-filter-all:  5;  // 过滤器显示所有标签
+@z-btn-add: 5;  // 添加按钮
 
 @z-rs-fullScreen: 99;   // 编译器结果全屏
 @z-fullScreenBtn: 100;  // 全屏显示按钮
