--- a/less/module/header.less
+++ b/less/module/header.less
@@ -43,7 +43,7 @@
 		padding: 0;
 
 //		background-color: @c115;//@background;
-		background-position: 4px 4px;
+//		background-position: 4px 4px;
 		background-repeat: no-repeat;
 	}
 }
