--- a/less/component/msg.less
+++ b/less/component/msg.less
@@ -2,24 +2,27 @@
 
 //----- message 消息 -----
 .msg{
-	min-height:70px;
-    margin:0;
-    padding-left:80px;
-    font-size:35px;
-    line-height:200%;
-    background:no-repeat;
-}
-.msg-tips{// 提示
-    background-image:url("../image/default/Msg-tips.png");
-}
-.msg-warm{// 警告
-    background-image:url("../image/default/Msg-error.png");
-}
-.msg-success{// 成功
+	min-height: 60px;
 
-}
-.msg-fail{// 失败
+    margin: 0;
+    padding-left: 60px;
 
+    background:no-repeat 5px 5px;
+
+	font-size: 30px;
+	line-height: 200%;
+}
+//.msg-info{  // 提示
+//    background-image:url("../image/default/Msg-tips.png");
+//}
+//.msg-warm{// 警告
+//    background-image:url("../image/default/Msg-error.png");
+//}
+.msg-success{   // 成功
+	background-image:url("../image/default/success.png");
+}
+.msg-error{ // 错误
+    background-image:url("../image/default/error.png");
 }
 
 ////提示信息
