--- a/less/lib/color.less
+++ b/less/lib/color.less
@@ -293,7 +293,9 @@
 
 //----- popup 弹窗颜色 -----
 @popup-border-success:  @c92;   // 弹窗 成功信息边框颜色
+@popup-bg-success:      @c92;   // 弹窗 成功背景颜色
 @popup-border-error:    @c51;   // 弹窗 错误信息边框颜色
+@popup-bg-error:        @c51;   // 弹窗 错误背景颜色
 
 //----- editor 编辑器 -----
 @editor_detail_title-bg:    @c29;   // 编码详细标题背景颜色
@@ -354,6 +356,7 @@
 
 //----- tag 标签 -----
 @tags-bg:           @c23;   // 标签背景颜色
+@tags-checked-bg:   @c35;   // 选中标签背景颜色
 @tags-checked-c:    @c2;    // 选中标签文字颜色
 @popup-tagsArea-bg:      @c141;  // 弹窗中的标签区域背景颜色
 @article-tagsArea-bg:    @c29;   // 文章中的标签区域背景颜色
