--- a/less/module/popup.less
+++ b/less/module/popup.less
@@ -72,7 +72,6 @@ body{
 	    color: #000;
     }
 
-
 	.list-left{
 		float: left;
 
@@ -92,17 +91,9 @@ body{
 		margin-right: -25px;
 	}
 }
-.popup-succ{
-    border-color: @popup-border-success;
+.popup-success{
+	background: @popup-bg-success;
 }
-//.popup-warming{
-//    border-color: @popup-border-warming;
-//}
 .popup-error{
-    border-color: @popup-border-error;
-}
-.popup-warm{
-
-}
-.popup-login{
+	background: @popup-bg-error;
 }
