--- a/less/component/btn.less
+++ b/less/component/btn.less
@@ -13,7 +13,7 @@
 	min-width: @btn-min-width;
 
 	border: @btn-border-width solid @btn-border;
-	border-radius: @border-radius;
+//	border-radius: @border-radius;
 
 	margin: 0 @btn-margin @btn-margin 0;
 	padding: 0 @padding-lr;
@@ -23,7 +23,7 @@
 	/**
 	 * 当使用背景图片时或与 .icon 联用时
 	 */
-	background-position: 4px 4px !important;
+	background-position: 3px 3px !important;
 
 	color: @font-color;
 	font-size: 16px;
