--- a/less/component/list.less
+++ b/less/component/list.less
@@ -1,17 +1,17 @@
 @charset "utf-8";
 
+@import "../lib/grid.less";
+
 //----- list 列表 -----
+.list{
+	min-height: 400px;
 
-// 信息列表
-.list-info{
-
+	li{
+		margin-bottom: @space;
+	}
 }
 
-// 图片列表
-.list-img{
-
-}
-
+//----- subList 子列表 -----
 .subList{
 	margin-left: 2em;
 
