--- a/less/module/header.less
+++ b/less/module/header.less
@@ -28,7 +28,7 @@
 		height: 70px;
 		margin: 0 auto;
 
-		outline: 5px solid @outline-color;
+//		outline: 5px solid @outline-color;
 		background: #efefef;
 	}
 
