--- a/less/module/module.less
+++ b/less/module/module.less
@@ -110,6 +110,7 @@
 
 @import "favorite.less";    // 收藏夹
 
+@import "rss.less";         // 订阅
 
 //@import "timeLine.less";    // 时间轴
 
@@ -202,4 +203,7 @@
 }
 .module-favor{
 	background-color: @c217;
+}
+.module-rss{
+	background-color: @c198;
 }
