--- a/less/style.less
+++ b/less/style.less
@@ -13,8 +13,11 @@
 // 模块 主要为各个模块中的细节样式 包括字体大小、行距等属性
 @import "module/module.less";
 
+// 皮肤
+//@import "skin/default.less";
+
 // 插件 UI JS 插件所需要的 CSS
-@import "ui/ui.less";
+//@import "ui/ui.less";
 
 // 公用 class 样式
 //@import "core/class.less";
