--- a/less/module/rss.less
+++ b/less/module/rss.less
@@ -42,7 +42,32 @@
 	}
 }
 .rss_content{
-	float: left;
+	overflow: hidden;
 
-	background-color: #add8e6;
+	border-bottom: 10px solid white;
+
+	margin-right: -10px;
+	margin-top: 10px;
+	padding-left: 10px;
+
+	background-color: white;
+}
+
+.rss_articleList{
+	overflow: hidden;
+
+	margin-bottom: -10px;
+	margin-top: 10px;
+
+	li{
+		float: left;
+		border: 10px dashed @c35;
+		border-left: 0;
+		border-top: 0;
+		margin-bottom: 0;
+		background: white;
+
+		padding: 0;
+		width: 300px;
+	}
 }
