--- a/less/component/toolBar.less
+++ b/less/component/toolBar.less
@@ -8,10 +8,12 @@
 /*  example:
 	<div class="toolBar">
 		<!-- 放置各个按钮、链接 -->
+
+		<div class="clearfix"></div>
 	</div>
  */
 .toolBar{
-	overflow: hidden;
+//	overflow: hidden;
 
 	position: relative;
 
