--- a/less/module/header.less
+++ b/less/module/header.less
@@ -16,7 +16,7 @@
 
     height: @header-height;
 
-//    background: @background;
+    background: @background;
 
 //    .boxShadow(0 5px 5px @box-shadow);
 
@@ -29,7 +29,7 @@
 		margin: 0 auto;
 
 //		outline: 5px solid @outline-color;
-		background: #efefef;
+//		background: #efefef;
 	}
 
 	.btn{
