--- a/less/component/btn.less
+++ b/less/component/btn.less
@@ -26,6 +26,7 @@
 	background-position: 3px 3px !important;
 
 	color: @font-color;
+	font-family: Consolas, \5b8b\4f53;
 	font-size: 16px;
 	line-height: @line-height - @btn-border-width *2;
 
