--- a/less/component/filter.less
+++ b/less/component/filter.less
@@ -8,6 +8,7 @@
 /*  example:
 	<div class="filter" id="Filter">
 		<button class="btn icon icon-filter filter_setBtn" id="setFilter" type="button" value="">过滤</button>
+
 		<button class="btn icon icon-reset filter_resetBtn hidden" id="resetFilter" type="button" value="">重置</button>
 		<div class="filter_tagArea" id="filterTagArea">
 			<div class="filter_checked" id="filterChecked"></div>
@@ -55,6 +56,7 @@
 
 	background: @filter-tag-bg;
 
+	font-weight: bold;
 	line-height: @line-height;
 }
 .filter_tag-checked{    // 过滤标签——已选中状态
