--- a/less/layout/w-480.less
+++ b/less/layout/w-480.less
@@ -8,7 +8,7 @@
 // .module-large    12
 // .module-big      12
 // .module-normal   12(默认)
-// .module-small    8(默认)
+// .module-small    12
 // .module-tiny     4(默认)
 @media screen and (min-width:480px) and (max-width:639px){
     .Container{
@@ -16,7 +16,8 @@
     }
 
     .module-large,
-    .module-big{
+    .module-big,
+    .module-small{
         .grid-x(12);
     }
 }
