--- a/less/lib/grid.less
+++ b/less/lib/grid.less
@@ -7,9 +7,7 @@
 @padding-lr: 5px;       // 行内元素 左右内边距
 
 @border-width:  0;    // 模块边框
-//@border-width:  5px;    // 模块边框
 
-//@outline-width: 5px;    // outline 边框宽度
 @outline-width: 0;    // outline 边框宽度
 
 //----- Grid 栅格系统 -----
@@ -18,9 +16,7 @@
 
 // 网格参数:
 @grid-unit:     40px;   // 网格（该宽度为一个栅格加一个栅格间距）
-//@grid-space:    10px;    // 网格间距（网格的内边距）
 @grid-space:    5px;    // 网格间距（网格的内边距）
-//@grid-space:    0;    // 网格间距（网格的内边距）
 
 @space: @grid-space *2; // 栅格间距 用作外边距、内边距、边框宽度
 
@@ -44,25 +40,24 @@
 // 只有 动态磁砖模块 设定高度 由文字行距 + 外边距 + 内边距 + 边框宽度 及其它常量计算出来
 // 其它类型模块高度为 auto 可设置最小高度
 
-//@module-metro-title-height: 30px;    // 动态磁砖模块标题高度
-@module-metro-title-height: 60px;    // 动态磁砖模块标题高度
-@module-info-height: 30px;    // 模块信息高度
-@module-metro-bg-height: 90px;  // 动态磁砖背景图片的高度 这是一个常量，与实际的图片大小为准
+@module-metro-title-height: 30px;   // 动态磁砖模块标题高度
+@module-metro-title-left:   @space; // 动态磁砖模块左位移
+@module-metro-bg-top:       20px;   // 动态磁砖模块背景图片上位移
+@module-info-height:        30px;   // 模块信息高度
+@module-metro-bg-height:    90px;   // 动态磁砖背景图片的高度 这是一个常量，与实际的图片大小为准
 
 // 动态磁砖高度 由 模块信息高度、模块标题高度、模块背景图片高度 相加得到
 @module-metro-height: @module-info-height + @module-metro-title-height + @module-metro-bg-height;
 
 // 模块标题上外边距
-@module-metro-title-margin-top: @module-info-height + @module-metro-bg-height;// - 10px;
+//@module-metro-title-margin-top: @module-info-height + @module-metro-bg-height;// - 10px;
 
-@module-info-top: -(@module-metro-title-height + @module-metro-title-margin-top);   // 模块信息
-@module-info-padding-right: @space; // 模块信息右边距
+//@module-info-top: -(@module-metro-title-height + @module-metro-title-margin-top);   // 模块信息
+//@module-info-padding-right: @space; // 模块信息右边距
 
 @module-main-title-height: @grid-unit *2 - @space;  // main 模块的标题高度
 @module-content-margin-left: @space;    // 模块内容左外边距
 
-//----- tools 工具栏 -----
-//@tools-height:  70px;
 
 //----- toolBar 工具条 -----
 @toolbar-border-width: @space;    // 工具条上左右边框
