--- a/less/module/watch.less
+++ b/less/module/watch.less
@@ -13,7 +13,7 @@
 .watch_wrap{
 	position: relative;
 
-	top: -(@module-metro-title-height + @module-info-height + 70px);//-120px;
+	top: @module-metro-bg-top; //-(@module-metro-title-height + @module-info-height + 70px);//-120px;
 
 	height: 80px;
 	width: 80px;
