--- a/less/style.less
+++ b/less/style.less
@@ -1,8 +1,11 @@
 @charset "utf-8";
 //---------- 所有样式汇总 ----------
 
-// 重置各个标签的默认样式 公用 class
+// 重置各个标签的默认样式
 @import "core/base.less";
+
+// 公用 class 样式
+@import "core/class.less";
 
 // 布局 主要为定位、宽高等属性
 @import "layout/layout.less";
