--- a/less/module/calendar.less
+++ b/less/module/calendar.less
@@ -27,9 +27,11 @@
 }
 
 .calendar_today{
-    position: relative;
+	position: absolute;
 
-    top: -(@module-metro-title-height + @module-info-height + 60px);
+	top: 60px;
+	left: 0;
+	right: 0;
 
     font-size: 36px;
     font-weight: bolder;
