--- a/less/module/module.less
+++ b/less/module/module.less
@@ -77,13 +77,14 @@
 }
 //----- 模块信息 -----
 .module_info{
-    position: relative;
+    position: absolute;
 
-    top: @module-info-top;
+    top: 0;// @module-info-top;
+	right: 10px;
 
     height: @module-info-height;
 
-    padding-right: @module-info-padding-right;
+//    padding-right: @module-info-padding-right;
 
     font-size: 18px;
     line-height: @module-info-height;
@@ -155,7 +156,7 @@
     height: @module-metro-height;
 
 	outline: @outline-width solid @outline-color;
-	background-position: center 20px;
+	background-position: center @module-metro-bg-top;
 //    .metroBgImg();
 
     &:hover{
@@ -163,12 +164,19 @@
     }
 
     .module_title{
-	    height: @module-metro-title-height;
+	    position: absolute;
+	    bottom: 0;
+	    left: @module-metro-title-left;
 
-	    margin-top: @module-metro-title-margin-top;
-        background: none;
+//	    height: @module-metro-title-height;
 
-	    line-height: 30px; //@module-metro-title-height;
+//	    margin-top: @module-metro-title-margin-top;
+
+	    background: none;
+
+	    line-height: @module-metro-title-height;
+
+	    font-size: 20px;
     }
 
     .module_content{
