--- a/less/layout/layout.less
+++ b/less/layout/layout.less
@@ -22,7 +22,7 @@
 	width: @grid-unit *24;
 
 	margin:0 auto;
-	padding: @header-height 0 0;  // @header-height + @grid-space 0 0;
+	padding: @header-height + @grid-space 0 0;  // @header-height + @grid-space 0 0;
 }
 
 .module-large{
