--- a/less/module/module.less
+++ b/less/module/module.less
@@ -158,9 +158,10 @@
 	outline: @outline-width solid @outline-color;
 	background-position: center @module-metro-bg-top;
 //    .metroBgImg();
+	box-shadow: 5px 5px 5px #888;
 
     &:hover{
-	    outline: @outline-width solid #d35400;
+	    outline: @outline-width solid @a-hover;
     }
 
     .module_title{
