--- a/less/style.less
+++ b/less/style.less
@@ -17,6 +17,7 @@
 @import "module/module.less";
 
 // 皮肤
+@import "index.less";   // 首页特别样式
 //@import "skin/default.less";
 
 // 插件 UI JS 插件所需要的 CSS
