--- a/less/module/editor.less
+++ b/less/module/editor.less
@@ -74,7 +74,7 @@
 }
 .editor_article{
     float:left;
-    width: 200px;
+    width: 210px;
 
     margin: 10px 0 0 10px;
     padding-right: 10px;
@@ -87,8 +87,8 @@
     }
     .article_preview{
         display: block;
-        max-width: 200px;
-        max-height: 200px;
+        max-width: 210px;
+//        max-height: 210px;
 
 	    margin: 0 auto;
     }
