--- a/less/component/component.less
+++ b/less/component/component.less
@@ -33,6 +33,8 @@
 
 @import "tag.less";     // 标签
 
+@import "countdown.less";   // 倒计时
+
 @import "filter.less";  // 过滤器
 
 @import "tab.less";     // 选项卡
