--- a/less/component/filter.less
+++ b/less/component/filter.less
@@ -5,9 +5,18 @@
 @import "../lib/z-index.less";
 
 //----- filter 过滤器 -----
-/*  example:
+/*  组件用到了倒计时 countdown 组件
+    example:
 	<div class="filter" id="Filter">
-		<button class="btn icon icon-filter filter_setBtn" id="setFilter" type="button" value="">过滤</button>
+		<button class="btn icon icon-filter filter_setBtn" id="setFilter" type="button" value="">过滤
+            <span id="filterCd" class="countdown hidden">
+				<span class="cd_quarter quarter_1"></span>
+				<span class="cd_quarter quarter_2"></span>
+				<span class="cd_quarter quarter_3"></span>
+				<span class="cd_quarter quarter_4"></span>
+				<span id="filterCdNum" class="cd_num">0</span>
+			</span>
+		</button>
 
 		<button class="btn icon icon-reset filter_resetBtn hidden" id="resetFilter" type="button" value="">重置</button>
 		<div class="filter_tagArea" id="filterTagArea">
@@ -18,6 +27,40 @@
  */
 .filter{
     position: relative;
+
+	/**
+	 * @extend    countdown.less
+	 */
+	.countdown{
+		position: absolute;
+		top: 0;
+		right: 5px;
+
+		height: 22px;
+		width: 22px;
+
+		border: 0;
+		margin: 2px 0;
+
+		background: #fff;
+	}
+	.cd_quarter{
+		background: #efefef;
+	}
+	.cd_num{
+		color: #44cef6;
+		line-height: 22px;
+	}
+}
+.filter_setBtn{
+	position: relative;
+}
+.filter_setBtn-cd{  // 启动倒计时
+	padding-right: 30px;
+
+	.countdown{
+		display: inline;
+	}
 }
 .filter_tagArea{
 	clear: both;
@@ -28,9 +71,9 @@
 
 	clear: both;
 
-	.filter_tag{
-		margin: 0 @space @space 0;
-	}
+//	.filter_tag{
+//		margin: 0 @space @space 0;
+//	}
 }
 .filter_all{    // 全部过滤标签区域
     overflow: auto;
