--- a/less/lib/color.less
+++ b/less/lib/color.less
@@ -342,6 +342,11 @@
 @track:          @c2;    // 分步操作背景颜色
 @track-on:       @c35;   // 分步操作 当前操作背景颜色
 
+//----- countdown 倒计时 -----
+@countdown-bg:          @c115;  // 倒计时背景颜色
+@countdown-quarter-bg:  @c35;   // 倒计时运行时背景颜色
+@countdown-num-color:   @c141;  // 倒计时数字的颜色
+
 //----- filter 过滤器 -----
 @filter-bg:             @c141;  // 过滤器组件背景颜色
 @filter-checked-bg:     @c29;   // 过滤器当前所选择的标签
