--- a/less/module/document.less
+++ b/less/module/document.less
@@ -53,6 +53,7 @@
     }
     dd{
         display: none;
+	    overflow: hidden;
 
         border-left: @space solid @document_dt-bg;
         margin-left: @space;
