--- a/less/lib/function.less
+++ b/less/lib/function.less
@@ -12,20 +12,20 @@
     background-position:center @num *(-130px)+20px;
 }
 
-.textIndent(@text-indent:2em){
-    text-indent: @text-indent;
-}
+//.textIndent(@text-indent:2em){
+//    text-indent: @text-indent;
+//}
 
 //----- 内容块 -----
-.container(@bdColor, @bgColor:#fff){
-    border: solid @bdColor;
-    border-width: 10px 0 0 10px;
-    margin: 10px 0 0 10px;
-    padding: 10px 0 0 10px;
-    background-color: @bgColor;
-}
+//.container(@bdColor, @bgColor:#fff){
+//    border: solid @bdColor;
+//    border-width: 10px 0 0 10px;
+//    margin: 10px 0 0 10px;
+//    padding: 10px 0 0 10px;
+//    background-color: @bgColor;
+//}
 
-//----- 盒子阴影 -----
+//----- CSS3 盒子阴影 box-shadow -----
 .boxShadow(@boxShadow){
     -webkit-box-shadow: @boxShadow;
     -moz-box-shadow: @boxShadow;
@@ -34,7 +34,7 @@
     box-shadow: @boxShadow;
 }
 
-//----- 透明 -----
+//----- CSS3 透明 opacity -----
 .transparent(@transparency:50){
     -webkit-opacity: @transparency/100;
     -moz-opacity: @transparency/100;
@@ -44,29 +44,56 @@
     filter: alpha(opacity=@transparency);
 }
 
-//----- 过度 -----
+//----- CSS3 过度效果 transition -----
 .transition(@translate){
     -webkit-transition: @translate;
     -moz-transition: @translate;
-    -ms-transition: @translate;
-    -o-transition: @translate;
+//    -ms-transition: @translate;
+//    -o-transition: @translate;
     transition: @translate;
 }
 
-//----- 变形基础定位 -----
+//----- CSS3 动画效果 animation -----
+.animation(@animation){
+	-webkit-animation: @animation;
+	-moz-animation: @animation;
+//	-ms-animation: @animation;
+//	-o-animation: @animation;
+	animation: @animation;
+}
+
+//----- CSS3 变形效果：变形基础定位 -----
 .transformOrigin(@origin){
     -webkit-transform-origin: @origin;
     -moz-transform-origin: @origin;
-    -ms-transform-origin: @origin;
-    -o-transform-origin: @origin;
+//    -ms-transform-origin: @origin;
+//    -o-transform-origin: @origin;
     transform-origin: @origin;
 }
 
+//----- CSS3 变形效果：X 轴扭曲
+.transformSkewX(@deg){
+	-webkit-transform: skewX(@deg);
+	-moz-transform: skewX(@deg);
+//	-ms-transform: skewX(@deg);
+//	-o-transform: skewX(@deg);
+	transform: skewX(@deg);
+}
+
+//----- CSS3 变形效果：Y 轴扭曲
+.transformSkewY(@deg){
+	-webkit-transform: skewY(@deg);
+	-moz-transform: skewY(@deg);
+//	-ms-transform: skewY(@deg);
+//	-o-transform: skewY(@deg);
+	transform: skewY(@deg);
+}
+
 //----- CSS3 旋转 -----
-.transformRotate(@deg) {
+.transformRotate(@deg){
     -webkit-transform: rotate(@deg);
     -moz-transform: rotate(@deg);
-    -ms-transform: rotate(@deg);
-    -o-transform: rotate(@deg);
+//    -ms-transform: rotate(@deg);
+//    -o-transform: rotate(@deg);
     transform: rotate(@deg);
 }
