--- a/less/component/icon.less
+++ b/less/component/icon.less
@@ -10,37 +10,46 @@
 	background-position: 5px 5px;
 	background-repeat: no-repeat;
 }
-.icon-add{// 添加
+//----- 表单 -----
+.icon-add{  // 添加
 	background-image: url("../image/default/add.png");
 }
-.icon-filter{// 过滤
+.icon-edit{ // 编辑
+	background-image: url("../image/default/edit.png");
+}
+.icon-delete{   // 删除
+	background-image: url("../image/default/delete.png");
+}
+.icon-filter{   // 过滤
 	background-image: url("../image/default/filter.png");
 }
-.icon-reset{// 重置
+.icon-reset{    // 重置
 	background-image: url("../image/default/reset.png");
 }
-.icon-save{// 保存
+.icon-save{ // 保存
 	background-image: url("../image/default/save.png");
 }
-.icon-addFile{// 添加文件
+.icon-addFile{  // 添加文件
 	background-image: url("../image/default/addFile.png");
 }
-.icon-fullScreen{// 全屏显示
+//----- 全屏显示 -----
+.icon-fullScreen{   // 全屏显示
 	background-image: url("../image/default/fullScreen.png");
 }
-.icon-fullScreenClose{// 关闭全屏显示
+.icon-fullScreenClose{  // 关闭全屏显示
 	background-image: url("../image/default/fullScreen-close.png");
 }
-.icon-arrow-d{// 指向下的三角形
+//----- 方向箭头 -----
+.icon-arrow-d{  // 指向下的三角形
 	background-image: url("../image/default/arrow-d.png");
 }
-.icon-arrow-l{// 指向左的三角形
+.icon-arrow-l{  // 指向左的三角形
 	background-image: url("../image/default/arrow-l.png");
 }
-.icon-arrow-r{// 指向右的三角形
+.icon-arrow-r{  // 指向右的三角形
 	background-image: url("../image/default/arrow-r.png");
 }
-.icon-arrow-u{// 指向上的三角形
+.icon-arrow-u{  // 指向上的三角形
 	background-image: url("../image/default/arrow-u.png");
 }
 
@@ -193,82 +202,3 @@
 		background: none;
     }
 }
-
-////----- 上箭头 -----
-//.icon-upArrow{
-//	&:before{
-//		position: absolute;
-//
-//		left: 0;
-//		top: 0;
-//
-//		height: 0;
-//		width: 0;
-//
-//		border-color:transparent transparent @icon;//rgba(255,255,255,0)
-//        border-style:solid;
-//        border-width:0 25px 25px;
-//
-//		background:none;
-//    }
-//	&:after{
-//
-//        width:24px;
-//        height:25px;
-//        margin:0 13px;
-//    }
-//}
-////----- 下箭头 -----
-//.icon-downArrow{
-//	&:before{
-//        width:24px;
-//        height:25px;
-//        margin:0 13px;
-//    }
-//	&:after{
-//		position: absolute;
-//
-//		left: 0;
-//		top: 0;
-//
-//		height: 0;
-//		width: 0;
-//
-//		border-color:@icon transparent transparent;//rgba(255,255,255,0)
-//        border-style:solid;
-//        border-width:25px 25px 0;
-//        background:none;
-//    }
-//}
-////----- 左箭头 -----
-//.icon-leftArrow{
-//	&:before{
-//        width:25px;
-//        height:24px;
-//        margin:13px 0;
-//    }
-//	&:after{
-//        width:0;
-//        height:0;
-//        border-color:transparent transparent transparent @icon;//rgba(255,255,255,0)
-//        border-style:solid;
-//        border-width:25px 0 25px 25px;
-//        background:none;
-//    }
-//}
-////----- 右箭头 -----
-//.icon-rightArrow{
-//	&:before{
-//        width:0;
-//        height:0;
-//        border-color:transparent @icon transparent transparent;//rgba(255,255,255,0)
-//        border-style:solid;
-//        border-width:25px 25px 25px 0;
-//        background:none;
-//    }
-//	&:after{
-//        width:25px;
-//        height:24px;
-//        margin:13px 0;
-//    }
-//}
