--- a/less/component/btn.less
+++ b/less/component/btn.less
@@ -60,18 +60,30 @@
 .btn-home{
 	background-image: url("../image/default/home.png");
 }
-
 .btn-menu{
 	background-image: url("../image/default/menu.png");
 }
-
 .btn-copyright{
 	background-image: url("../image/default/copyright.png");
 }
-
 .btn-backTop{
 	float: right;
 	background-image: url("../image/default/backTop.png");
+}
+.btn-blog{
+	background-image: url("../image/default/btn-blog.png");
+}
+.btn-document{
+	background-image: url("../image/default/btn-document.png");
+}
+.btn-editor{
+	background-image: url("../image/default/btn-editor.png");
+}
+.btn-favorite{
+	background-image: url("../image/default/btn-favorite.png");
+}
+.btn-palette{
+	background-image: url("../image/default/btn-palette.png");
 }
 
 // 按钮类型
