--- a/less/module/favorite.less
+++ b/less/module/favorite.less
@@ -24,6 +24,19 @@
     .tag:after{
         background: @article-bg;
     }
+
+	.article{
+		position: relative;
+
+		.btn_group{
+			position: absolute;
+			top: 0;
+			right: 0;
+		}
+		.btn{
+			margin: 10px 10px 0 0;
+		}
+	}
 }
 .favor_page{
     margin: 0 0 0 @space;
