--- a/less/module/module.less
+++ b/less/module/module.less
@@ -158,7 +158,8 @@
 	outline: @outline-width solid @outline-color;
 	background-position: center @module-metro-bg-top;
 //    .metroBgImg();
-	box-shadow: 5px 5px 5px #888;
+
+	.boxShadow(5px 5px 5px #888);
 
     &:hover{
 	    outline: @outline-width solid @a-hover;
