--- a/less/index.less
+++ b/less/index.less
@@ -1,10 +1,16 @@
 @charset "utf-8";
 
+@import "lib/function.less";
+
 //---------- index 首页特别样式 ----------
 /*body*/.Container.index{
 	background: linear-gradient(135deg, #c0c0c0 22px, #efefef 22px, #efefef 24px, transparent 24px,
 			transparent 67px, #efefef 67px, #efefef 69px, transparent 69px),
 		linear-gradient(225deg, #c0c0c0 22px, #efefef 22px, #efefef 24px, transparent 24px,
+			transparent 67px, #efefef 67px, #efefef 69px, transparent 69px) 0 64px;
+	background: -ms-linear-gradient(135deg, #c0c0c0 22px, #efefef 22px, #efefef 24px, transparent 24px,
+			transparent 67px, #efefef 67px, #efefef 69px, transparent 69px),
+		-ms-linear-gradient(225deg, #c0c0c0 22px, #efefef 22px, #efefef 24px, transparent 24px,
 			transparent 67px, #efefef 67px, #efefef 69px, transparent 69px) 0 64px;
 	background-color: #c0c0c0;
 	background-size: 64px 128px;
