--- a/less/lib/function.less
+++ b/less/lib/function.less
@@ -25,6 +25,19 @@
 //    background-color: @bgColor;
 //}
 
+//----- CSS3 背景 线性渐变 linear-gradient -----
+//.bgLinearGradient(@lineGradient){
+//	background: linear-gradient(@lineGradient);
+//	background: -ms-linear-gradient(@lineGradient);
+//}
+
+//----- CSS3 盒模型 box-sizing -----
+.boxSizing(@boxSizing){
+	-webkit-box-sizing: @boxSizing;
+	-moz-box-sizing: @boxSizing;
+	box-sizing: @boxSizing;
+}
+
 //----- CSS3 盒子阴影 box-shadow -----
 .boxShadow(@boxShadow){
     -webkit-box-shadow: @boxShadow;
@@ -57,7 +70,7 @@
 .animation(@animation){
 	-webkit-animation: @animation;
 	-moz-animation: @animation;
-//	-ms-animation: @animation;
+	-ms-animation: @animation;
 //	-o-animation: @animation;
 	animation: @animation;
 }
@@ -66,7 +79,7 @@
 .transformOrigin(@origin){
     -webkit-transform-origin: @origin;
     -moz-transform-origin: @origin;
-//    -ms-transform-origin: @origin;
+    -ms-transform-origin: @origin;
 //    -o-transform-origin: @origin;
     transform-origin: @origin;
 }
@@ -75,7 +88,7 @@
 .transformSkewX(@deg){
 	-webkit-transform: skewX(@deg);
 	-moz-transform: skewX(@deg);
-//	-ms-transform: skewX(@deg);
+	-ms-transform: skewX(@deg);
 //	-o-transform: skewX(@deg);
 	transform: skewX(@deg);
 }
@@ -84,7 +97,7 @@
 .transformSkewY(@deg){
 	-webkit-transform: skewY(@deg);
 	-moz-transform: skewY(@deg);
-//	-ms-transform: skewY(@deg);
+	-ms-transform: skewY(@deg);
 //	-o-transform: skewY(@deg);
 	transform: skewY(@deg);
 }
@@ -93,7 +106,7 @@
 .transformRotate(@deg){
     -webkit-transform: rotate(@deg);
     -moz-transform: rotate(@deg);
-//    -ms-transform: rotate(@deg);
+    -ms-transform: rotate(@deg);
 //    -o-transform: rotate(@deg);
     transform: rotate(@deg);
 }
